# remote-browser-use-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  cloud.md  pyproject.toml  reagan_logo_animation_compare.html  reagan_logo_sprites.md  reagan_plan_logo_animation.md  reagan_plan_new_welcome_screens.md  reagan_plan_slash_command_popups.md  reagan_rendering_logic_explainer.html  reagan_subagent_output_explainer.html  reagan_terminal_colorway_compare.html  reagan_transcript_marker_compare.html
.github/workflows/: release.yml
.playwright-mcp/: page-2026-06-01T12-18-26-240Z.yml
crates/browser-use-browser/: Cargo.toml
crates/browser-use-browser/src/: lib.rs
crates/browser-use-cli/: Cargo.toml
crates/browser-use-cli/src/: main.rs
crates/browser-use-core/: Cargo.toml
crates/browser-use-core/src/: lib.rs  product_analytics.rs  telemetry.rs
crates/browser-use-core/src/tools/: command.rs  files.rs  mod.rs
crates/browser-use-mcp/: Cargo.toml
crates/browser-use-mcp/src/: admin.rs  auth.rs  db.rs  main.rs  server.rs  stream.rs
crates/browser-use-protocol/: Cargo.toml
crates/browser-use-protocol/src/: lib.rs
crates/browser-use-providers/: Cargo.toml
crates/browser-use-providers/src/: lib.rs
crates/browser-use-python-worker/: Cargo.toml
crates/browser-use-python-worker/src/: lib.rs
crates/browser-use-store/: Cargo.toml
crates/browser-use-store/migrations/: 0001_initial.sql  0002_agent_session_fields.sql  0003_agent_messages.sql  0004_app_settings.sql  0005_unique_agent_paths.sql
crates/browser-use-store/src/: lib.rs
crates/browser-use-tui/: Cargo.toml
crates/browser-use-tui/src/: composer.rs  main.rs  markdown.rs  palette.rs  render.rs  renderer_v2.rs  runtime.rs  settings.rs  theme.rs  transcript.rs  welcome.rs
datasets/: real_v8.json
docs/: browser-agent-harness-learnings.md  browser-agent-harness-plan.md  codex-native-browser-harness-plan.md  completion-audit.md  eng-4738-browser-management-doctor-plan.md  goal-completion-audit.md  implementation-roadmap.md  implementation-status.md  plan-pure-rust-browser-harness.md  public-launch-checklist.md  real-v8-codex-cloud-eval.md  real-v8-codex-cloud-run-20260513-report.md  real-v8-fix-implementation-plan.md  rewrite-verification.md  terminal-renderer-architecture.md  terminal-ui-testing.md
prompts/: browser-agent-system.md  browser-script-tool-description.md  browser-tool-description.md  dataset-case-user.md  python-tool-description.md
python/llm_browser_worker/: __init__.py  rust_cli.py  worker.py
python/tests/: test_worker_package.py
scripts/: dev-bin.sh  live-browser-boundary-smoke.sh  package-release.sh  tui-terminal-smoke.py  verify-terminal-ui.sh
scripts/install/: install.sh  test-wrappers.sh
src/llm_browser/: __init__.py  brand.py  cli.py  config.py  datasets.py
src/llm_browser/agent/: compaction.py  manager.py  service.py
src/llm_browser/auth/: __init__.py  anthropic.py  codex.py  store.py
src/llm_browser/browser/: __init__.py  cdp.py  daemon_client.py  daemon_ipc.py  helpers.py  instructions.py  runtime.py
src/llm_browser/harness/: __init__.py  api.py  helpers.py  skills.py
src/llm_browser/harness_skills/: __init__.py  artifacts.py  cookies.py  dom_tools.py  downloads.py  extraction.py  harnesless_compat.py  research.py  tracing.py
src/llm_browser/interaction_skills/: dialogs.md  downloads.md  iframes.md  network.md  screenshots.md  shadow-dom.md
src/llm_browser/llm/: __init__.py  registry.py
src/llm_browser/provider/: anthropic_messages.py  codex_responses.py  factory.py  image_smoke.py  openai_compatible_chat.py  openai_responses.py  types.py
src/llm_browser/session/: store.py  trace.py  usage.py
src/llm_browser/tool/: browser_exports.py  builtins.py  context.py  files.py  python_browser.py  python_exec.py  result.py  session.py  shell.py
src/llm_browser/tui/: __init__.py  app.py  simple.py
tests/: test_agent_loop.py  test_anthropic_messages_provider.py  test_browser_daemon.py  test_browser_runtime.py  test_cdp_client.py  test_codex_auth.py  test_codex_responses_provider.py  test_config_cli.py  test_datasets.py  test_event_spine.py  test_openai_compatible_chat_provider.py  test_openai_responses_provider.py  test_provider_factory.py  test_provider_image_smoke.py  test_python_browser_tool.py  test_session_manager.py  test_shell_file_tools.py  test_trace_bundle.py  test_tui.py
