[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-use-terminal"
version = "0.1.0"
description = "A browser-specific LLM harness built around raw CDP, durable sessions, and screenshot timelines."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "curl-cffi>=0.13.0",
  "lxml>=6.1.0",
  "pandas>=2.3.3",
  "pillow>=11.3.0",
  "pypdf>=6.10.2",
  "requests>=2.31",
  "tabulate>=0.9.0",
  "textual>=8.2.5",
  "websocket-client>=1.8",
]

[project.scripts]
browser-use-terminal = "llm_browser.cli:main"
but = "llm_browser.cli:tui_main"
browser-use-terminal-ui = "llm_browser.cli:tui_main"
llm-browser = "llm_browser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
