[package]
name = "browser-use-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
browser-use-protocol = { path = "../browser-use-protocol" }
browser-use-providers = { path = "../browser-use-providers" }
browser-use-python-worker = { path = "../browser-use-python-worker" }
browser-use-store = { path = "../browser-use-store" }
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde_json.workspace = true
tempfile.workspace = true
