[package]
name = "browser-use-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
browser-use-browser = { path = "../browser-use-browser" }
browser-use-protocol = { path = "../browser-use-protocol" }
browser-use-providers = { path = "../browser-use-providers" }
browser-use-python-worker = { path = "../browser-use-python-worker" }
browser-use-store = { path = "../browser-use-store" }
ignore.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
portable-pty.workspace = true
rustls.workspace = true
serde_json.workspace = true
tempfile.workspace = true
