[package]
name = "browser-use-mcp"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "MCP server that exposes browser automation tools (CDP/Chrome) to any MCP-compatible AI agent"
repository = "https://github.com/browser-use/terminal"
homepage = "https://github.com/browser-use/terminal"
keywords = ["mcp", "browser", "cdp", "automation", "ai"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "browser-use-mcp"
path = "src/main.rs"

[dependencies]
browser-use-browser = { path = "../browser-use-browser" }
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
axum = { version = "0.8", features = ["http1"] }
tokio-util = "0.7"
schemars = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
