[package]
name = "browser-use-tui"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "but"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
browser-use-core = { path = "../browser-use-core" }
browser-use-protocol = { path = "../browser-use-protocol" }
browser-use-store = { path = "../browser-use-store" }
clap.workspace = true
crossterm.workspace = true
open.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
